--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -112,7 +112,7 @@
   &__cart
     position: relative
     width: 175px
-    &:hover
+    +hover
       .tooltip
         visibility: visible
         opacity: 1
