--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -8,7 +8,7 @@ hero: {
 грузинский ресторан в Киеве. И готовы принять всех, кто хочет
 познакомиться с грузинской кухней и культурой поближе!',
   btns: [
-    { title: 'Хочу к вам в ресторан', mod: 'btn--transp btn--white-dark', wrapMod: 'border'}
+    { title: 'Хочу к вам в ресторан', mod: 'btn--full btn--transp btn--white-dark', wrapMod: 'border', href: '#' }
   ],
   breadcrumbs: {
     list: [
