--- a/src/templates/contacts.html
+++ b/src/templates/contacts.html
@@ -7,7 +7,7 @@ hero: {
   subttl: 'Мы всегда ждем вашего звонка или визита. Заезжайте к нам в гости,
 звоните нам и следите за нами в социальных сетях!',
   btns: [
-    { title: 'Посмотреть адреса', mod: 'btn--transp btn--white-dark', wrapMod: 'border'}
+    { title: 'Посмотреть адреса', mod: 'btn--full btn--transp btn--white-dark', wrapMod: 'border', href: '#' }
   ],
   breadcrumbs: {
     list: [
@@ -31,5 +31,3 @@ sectionGallery: {
   
   {% include "partials/sections/_s-contacts-map.html" %}
 {% endblock %}
-
-
