--- a/src/templates/delivery.html
+++ b/src/templates/delivery.html
@@ -12,7 +12,7 @@ page: delivery
     subttl: 'Нет сил и времени идти в ресторан? Закажите доставку наших блюд к себе 
   домой или в офис. Среднее время доставки заказа:  45 – 60 минут',
     btns: [
-      { title: 'Заказать доставку', mod: '', wrapMod: 'border'}
+      { title: 'Заказать доставку', mod: 'btn--full', wrapMod: 'border', href: '#' }
     ],
     breadcrumbs: {
       list: [
