--- a/src/templates/events.html
+++ b/src/templates/events.html
@@ -8,7 +8,7 @@ hero: {
 в нашем ресторане и хотим поделиться с вами
 нашими впечатлениями!',
   btns: [
-    { title: 'Заказать мероприятие', mod: 'btn--transp btn--white-dark', wrapMod: 'border'}
+    { href: false, title: 'Заказать мероприятие', mod: 'btn--dull btn--transp btn--white-dark js-popup-open', wrapMod: 'border', attributes: {'data-popup-target': 'order' } }
   ],
   breadcrumbs: {
     list: [
