--- a/src/templates/partials/_hero.html
+++ b/src/templates/partials/_hero.html
@@ -24,7 +24,7 @@
   
 
   {% if hero.img %}
-    <div class="section-img js-parallax-scene is-bottom is-left js-anim-el" data-anim-name="bounceInDown">
+    <div class="section-img js-parallax-scene is-bottom is-left js-anim-el" data-anim-name="bounceInUp">
       <img data-depth="0.1" data-src="./img/pngs/tomato.png" alt="" class="js-lazy">
     </div>
   {% endif %}
