--- a/src/templates/partials/_hits-slider.html
+++ b/src/templates/partials/_hits-slider.html
@@ -194,7 +194,8 @@ slider = {
                 price = j.price,
                 title = j.title,
                 img = 'lulya3.png',
-                label = j.label
+                label = j.label,
+                form = true
               ) }}              
             </div>
             {% endfor %}
