--- a/src/templates/partials/_slider-reccoment.html
+++ b/src/templates/partials/_slider-reccoment.html
@@ -15,7 +15,8 @@
             mod = 'item--transp-white',
             price = i.price,
             title = i.title,
-            img = 'lulya3.png'
+            img = 'lulya3.png',
+            form = true
           ) }}
         </div>
         {% endfor %}
