--- a/src/templates/partials/_vine-slider.html
+++ b/src/templates/partials/_vine-slider.html
@@ -38,7 +38,8 @@
           counter = { mod: 'counter--white' },
           img = 'vine.png',
           label = { mod: 'item__label-age', title: '18+'},
-          border = { mod: 'border--sm-dark'}
+          border = { mod: 'border--sm-dark'},
+          form = true
         ) }}
       </div>
       {% endfor %}
