--- a/src/templates/partials/sections/_s-item.html
+++ b/src/templates/partials/sections/_s-item.html
@@ -9,7 +9,8 @@
             {{ mixins.item(
               mod = 'item--transp', 
               price = '<div class="price price--md">95.00<small>грн</small></div> (170 г)',
-              img = 'lg-01.png'
+              img = 'lg-01.png',
+              form = true
             ) }}
           </div>
         </div>
