--- a/src/templates/services.html
+++ b/src/templates/services.html
@@ -8,7 +8,7 @@ hero: {
 Кулинарные тимбилдинги, десткие праздники, свадьбы, 
 и банкеты  - мы организуем для вас всё!',
   btns: [
-    { title: 'Заказать мероприятие', mod: 'btn--transp btn--white-dark', wrapMod: 'border'}
+    { href: false, title: 'Заказать мероприятие', mod: 'btn--full btn--transp btn--white-dark js-popup-open', wrapMod: 'border', attributes: {'data-popup-target': 'order' } }
   ],
   breadcrumbs: {
     list: [
