--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -192,13 +192,15 @@ button
   border-left: 3px solid $accent
   padding: 30px
   box-shadow: 0px 3px 57px 0px rgba(0, 0, 0, 0.11)
+  +lg
+    padding: 20px
+  +sm
+    padding: 15px
   p
     +notlast
       margin-bottom: 30px
       +md
         margin-bottom: 15px
-  
-
 
 .reccomend
   padding-top: 85px
@@ -221,13 +223,3 @@ button
   .icon
     margin-right: 5px
     font-size: 18px
-
-@keyframes fadeIn
-  0%
-    opacity: 0
-  100%
-    opacity: 1
-  
-
-
-  
