--- a/src/sass/partials/_about.sass
+++ b/src/sass/partials/_about.sass
@@ -2,6 +2,8 @@
   &--compl
     .about-block
       margin-bottom: 0
+      +md
+        margin-bottom: 15px
       &:nth-child(1)
         .about-block__text
           top: 10%
@@ -75,6 +77,8 @@
   background-size: auto
   background-position: 0 100%
   margin-bottom: 95px
+  +lg
+    margin-bottom: 60px
   +md
     margin-bottom: 15px
     background-size: 60%
@@ -128,7 +132,9 @@
     opacity: 0
 
   &--quote
-    +flex(flex-end)    
+    +flex(flex-end)
+    +sm
+      margin-bottom: 65px
     .about-block__quote
       position: absolute
       top: 50%
@@ -161,12 +167,18 @@
     margin-left: -15px
     margin-right: -15px
     +flex(flex-start, normal, row, wrap)
+    +md
+      display: block
     #{$this}__img
       padding-top: 30%
       width: calc(50% - 30px)
       margin-left: 15px
       margin-right: 15px
       position: relative
+      +md
+        width: auto
+        margin-bottom: 15px
+        padding-top: 50%
     #{$this}__text
       width: calc(50% - 30px)
       margin-left: 15px
@@ -177,3 +189,8 @@
       +flex(center, normal, column)
       padding: 0
       padding-left: 25px
+      +lg
+        padding-left: 0
+      +md
+        width: auto
+        margin-bottom: 15px
