--- a/src/sass/partials/_gallery.sass
+++ b/src/sass/partials/_gallery.sass
@@ -2,12 +2,28 @@
   +flex(flex-start, normal, row, wrap)
   margin-left: -15px
   margin-right: -15px
+  +md
+    margin-left: -10px
+    margin-right: -10px
+  +xs
+    margin-left: -5px
+    margin-right: -5px
   .gallery-slide
     margin-left: 15px
     margin-right: 15px
     width: calc(50% - 30px)
     margin-bottom: 30px
     padding-top: 25%
+    +md
+      margin-left: 10px
+      margin-right: 10px
+      width: calc(50% - 20px)
+      margin-bottom: 20px
+    +xs
+      margin-left: 5px
+      margin-right: 5px
+      width: calc(50% - 10px)
+      margin-bottom: 10px
 
 .gallery-slide
   +cover
