--- a/src/templates/partials/sections/_s-event.html
+++ b/src/templates/partials/sections/_s-event.html
@@ -1,5 +1,5 @@
 <!-- begin section -->
-<section class="section">
+<section class="section pt-sml pb-md">
   <div class="container">
     <div class="section__title section__title-mb-sm section-title js-anim-el" data-anim-name="fadeInLeft">
       <div class="section-title__title">
