--- a/src/templates/partials/sections/_s-gallery-simple.html
+++ b/src/templates/partials/sections/_s-gallery-simple.html
@@ -1,5 +1,5 @@
 <!-- begin section -->
-<section class="section">
+<section class="section pt-sml pb-sml">
   <div class="container">
     <div class="section__title section__title-mb section-title js-anim-el" data-anim-name="fadeInLeft">
       <div class="section-title__title">
@@ -13,7 +13,7 @@
     </div>
 
     <!-- begin gallery -->
-    <div class="gallery js-lightgallery">
+    <div class="gallery js-lightgallery js-anim-el" data-anim-name="fadeInLeft" data-anim-delay="0.2s">
       {% for i in range(0, 6) %}
         <!-- begin gallery-slide -->
             <a
