--- a/src/sass/partials/_tooltip.sass
+++ b/src/sass/partials/_tooltip.sass
@@ -67,6 +67,8 @@
     flex-wrap: wrap
     padding-right: 0
   &__img
+    img
+      min-width: 10px
     +sm
       // width: 70px
       // flex: 0 0 70px
