upd tooltip transition

--- a/src/sass/partials/_tooltip.sass
+++ b/src/sass/partials/_tooltip.sass
@@ -7,7 +7,8 @@
   top: 100%
   right: 0
   width: 570px
-  +tr(opacity .3s, visibility .3s)
+  +ready
+    +tr(opacity .3s, visibility .3s)
   +sm
     width: 400px
   +xss
