--- a/src/sass/partials/_form.sass
+++ b/src/sass/partials/_form.sass
@@ -35,6 +35,8 @@
       margin-bottom: 15px
     +xs
       width: 100%
+    &.is-hidden
+      display: none
   &__col-lg
     +lg
       width: 100%
