--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -11,7 +11,7 @@
 
         <div class="footer__copy">
           <p>&copy; 2019 Квеври</p>
-          <p>Квеври - лучший ресторан<br> грузинской кухня в Киеве!</p>
+          <p>Поєднуючи традиції та інновації</p>
         </div>
 
         <div class="footer__pay">
