--- a/src/templates/partials/sections/_s-features.html
+++ b/src/templates/partials/sections/_s-features.html
@@ -37,7 +37,7 @@ features = {
           и настоящую грузинскую приправу...</p>
           <p>Только настоящие уцхо-сунели и сванская соль для
               настоящих ценителей Грузии.</p>',
-      imgContent: 'hach.png',
+      imgContent: 'Adjar.png',
       delay: '0.4s'
     },
     {
