--- a/src/templates/partials/sections/_s-history.html
+++ b/src/templates/partials/sections/_s-history.html
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="section__title section__title-mb-sm section-title section-title--light js-anim-el" data-anim-name="fadeInLeft">
       <div class="section-title__title">
-        <h2 class="title title--white">У нашего названия есть своя <em class="accent">история</em>?</h2>
+        <h2 class="title title--white">У нашего названия есть своя <em class="accent">история</em></h2>
       </div>
     </div>
 
