--- a/src/sass/partials/_animations.sass
+++ b/src/sass/partials/_animations.sass
@@ -8,6 +8,8 @@
   animation-name: rotateInLeft
 .fadeInLeftCenter
   animation-name: fadeInLeftCenter
+  +sm
+    animation-name: fadeInLeftCenterMob
 .fadeInUp
   animation-name: fadeInUp
 
@@ -32,6 +34,15 @@
   100%
     opacity: 1
     transform: translate(0, -50%)
+
+@keyframes fadeInLeftCenterMob
+  0%
+    opacity: 0
+    transform: translate(calc(-50% - 30px), 0)
+  100%
+    opacity: 1
+    transform: translate(-50%, 0)
+
 
 @keyframes bounceInUp
   0% 
