--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -17,6 +17,9 @@
       {% include "partials/_header.html" %}
       <!-- begin main -->
       <main class="main{% if mainClass %} {{ mainClass }}{% endif %}">
+        {% if flag %}
+        <div class="main__img"><img class="js-lazy" alt="" data-src="./img/flag.svg"/></div>
+        {% endif %}
         {% if breadcrumbs %}
         <!-- begin main__breadcrumbs -->
         <div class="main__breadcrumbs">
