--- a/src/sass/_typo.sass
+++ b/src/sass/_typo.sass
@@ -27,6 +27,10 @@ h1, h2, h3, h4, h5, h6
     +css-lock(21, 35, 320, 1499, font-size)
   &--h4
     +css-lock(18, 24, 320, 1499, font-size)
+  &--h5
+    +css-lock(14, 16, 767, 1499, font-size)
+    +sm
+      font-size: $fz-sm !important
   &--semi
     +semi
   &--ttn
