--- a/src/sass/helpers/_variables.sass
+++ b/src/sass/helpers/_variables.sass
@@ -20,3 +20,18 @@ $gray-dark: #242323
 
 $yellow: #f3b652
 $blue: #20a0ea
+
+$header-top-height: 52px
+$header-top-height-lg: 52px
+$header-top-height-md: 45px
+$header-top-height-sm: 42px
+
+$header-bottom-height: 46px
+$header-bottom-height-lg: 46px
+$header-bottom-height-md: 0px
+$header-bottom-height-sm: 0px
+
+$header-height: $header-top-height + $header-bottom-height
+$header-height-lg: $header-top-height-lg + $header-bottom-height-lg
+$header-height-md: $header-top-height-md + $header-bottom-height-md
+$header-height-sm: $header-top-height-sm + $header-bottom-height-sm
