--- a/src/sass/partials/_order.sass
+++ b/src/sass/partials/_order.sass
@@ -15,7 +15,7 @@
   &__left
     width: percentage(8/12)
     +lg
-      width: percentage(7/12)
+      // width: percentage(7/12)
     +md
       width: 100%
     +sm
@@ -23,7 +23,7 @@
   &__right
     width: percentage(4/12)
     +lg
-      width: percentage(5/12)
+      // width: percentage(5/12)
     +md
       width: 100%
     +sm
