--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -29,31 +29,15 @@ items: [
     price: '<div class="price">95.00<small>грн</small></div> (100 г)'
   },
   {
-    title: 'шашлык из курицы',
+    title: 'форель на мангале форель на мангале форель на мангале форель на мангале',
     price: '<div class="price">95.00<small>грн</small></div> (100 г)'
   },
   {
-    title: 'шашлык из свинины',
+    title: 'форель на мангале форель на мангале форель на мангале форель на мангале',
     price: '<div class="price">95.00<small>грн</small></div> (100 г)'
   },
   {
-    title: 'люля-кебаб из Говядины',
-    price: '<div class="price">95.00<small>грн</small></div> (100 г)'
-  },
-  {
-    title: 'шашлык из курицы',
-    price: '<div class="price">95.00<small>грн</small></div> (100 г)'
-  },
-  {
-    title: 'форель на мангале',
-    price: '<div class="price">95.00<small>грн</small></div> (100 г)'
-  },
-  {
-    title: 'шашлык из свинины',
-    price: '<div class="price">95.00<small>грн</small></div> (100 г)'
-  },
-  {
-    title: 'люля-кебаб из Говядины',
+    title: 'форель на мангале форель на мангале форель на мангале форель на мангале',
     price: '<div class="price">95.00<small>грн</small></div> (100 г)'
   }
 ]
