--- a/src/templates/partials/sections/_s-cart.html
+++ b/src/templates/partials/sections/_s-cart.html
@@ -1,7 +1,7 @@
 {%set
 cart = [
   { title: 'шашлык из курицы <small>(100 г)</small>', price: '190<small>грн</small>', amount: '2 x 95 грн' },
-  { title: 'форель на мангале<small>(100 г)</small>', price: '475<small>грн</small>', amount: '5 x 95 грн' },
+  { title: 'Овощной салат по-грузински с заправкой мацони и тертым сыром сулугуни <small>(100 г)</small>', price: '475<small>грн</small>', amount: '5 x 95 грн' },
   { title: 'шашлык из свинины<small>(100 г)</small>', price: '285<small>грн</small>', amount: '3 x 95 грн' }
 ]
 %}
