--- a/src/sass/partials/_cart.sass
+++ b/src/sass/partials/_cart.sass
@@ -1,39 +1,58 @@
 .cart-item
   +flex(flex-start, center)
+  display: flex !important
   position: relative
   border-bottom: 1px solid  $gray
   padding-top: 20px
   padding-bottom: 20px
   +xs
     flex-wrap: wrap
+  +before
+    display: none !important
   &__img
-    max-width: 20%
+    // max-width: 20%
+    width: 20%
+    +lg
+      width: 15%
+    +sm
+      width: 10%
+    +xs
+      width: 30%
   &__title
-    flex-grow: 1
+    // flex-grow: 1
     text-transform: uppercase
     color: $white-dark
     +semi
     padding-left: 30px
     padding-right: 10px
+    width: 45%
+    text-align: left
     +lg
       padding-left: 15px
+    +sm
+      width: 40%
+    +xs
+      width: 70%
     small
       display: block
       +light
       font-size: 13px
       color: $c-text
   &__price
+    width: calc(35% - 162px)
     padding-left: 70px
     +xl
-      padding-left: 50px
-    +lg
-      padding-left: 40px
-    +xl
-      width: 50%
-      margin-top: 15px
-      padding-left: 0
+      // padding-left: 50px
+      padding-left: 10px
       text-align: right
+      width: calc(40% - 162px)
+    +sm
+      width: calc(50% - 162px)
+    +xs
+      width: 50%
   &__counter
+    // width: 18%
+    width: 162px
     +xs
       width: 50%
       margin-top: 15px
@@ -45,3 +64,5 @@
     top: 15px
     right: 0
     z-index: 1
+    +sm
+      top: 0
