--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -1,8 +1,12 @@
 .header
   $this: &
-  position: relative
+  // position: relative
   z-index: 10
   +tr(transform .3s)
+  position: fixed
+  left: 0
+  right: 0
+  top: 0
   &.is-hidden
     display: none
   &__inner
@@ -16,18 +20,23 @@
       padding-left: 40px
   &__top
     background-color: $white
-    padding-top: 20px
-    padding-bottom: 20px
+    height: $header-top-height
     +lg
-      padding-top: 10px
-      padding-bottom: 10px
+      height: $header-top-height-lg
+    +md
+      height: $header-top-height-md
     +sm
-      padding-top: 5px
-      padding-bottom: 5px
+      height: $header-top-height-sm
+    +r(374)
+      #{$this}__inner
+        padding-top: 10px
     
   &__bottom
     background-color: $black-light
     box-shadow: 0px 6px 7px 0px rgba(0, 0, 0, 0.45)
+    height: $header-bottom-height
+    +lg
+      height: $header-bottom-height-lg
     +md
       position: fixed
       overflow: auto
@@ -101,19 +110,20 @@
       display: none
   &__logo
     position: absolute
-    top: -20px
+    // top: -20px
+    top: 0
     left: 0
     z-index: 1
-    +lg
-      top: -10px
-    +sm
-      top: -5px
+    // +lg
+    //   top: -10px
+    // +sm
+    //   top: -5px
     +xs
       left: -15px
   &__cart
     position: relative
     width: 175px
-    +hover
+    &:hover
       .tooltip
         visibility: visible
         opacity: 1
@@ -162,7 +172,7 @@
     color: $gray
     font-size: 13px
     margin-bottom: 5px
-    +xss
+    +xs
       font-size: 11px
     +r(374)
       display: none
@@ -188,6 +198,8 @@
     color: $accent
     background-color: transparent
     display: block
+    +sm
+      display: none
   &__title
     font-size: 13px
     display: block
