--- a/src/sass/partials/_items.sass
+++ b/src/sass/partials/_items.sass
@@ -25,6 +25,7 @@
     // background-size: contain
     // padding-top: 40%
     margin-bottom: 20px
+    flex-grow: 1
   &__title
     color: $white-dark
     +semi
@@ -93,7 +94,8 @@
     +hover
       border-color: transparent
   &--transp-white
-    background-color: rgba($white, .1)
+    // background-color: rgba($white, .1)
+    background-color: $black
   &--descr
     padding-top: 0
     box-shadow: 0px 0px 10px 0px rgba(2, 0, 0, 0.26)
