--- a/src/sass/partials/_menu.sass
+++ b/src/sass/partials/_menu.sass
@@ -5,25 +5,16 @@
   +md
     margin-left: -10px
     margin-right: -10px
-  &__toggle-wrap
+  &__toggle
     display: none
     padding-left: 15px
     padding-right: 15px
     margin-bottom: 25px
     +lg
       display: block
-  &__toggle
-    display: inline-block
-    background-color: transparent
-    color: $accent
-    +bold
-    text-transform: uppercase
-    +after
-      +icon-arrow(12, 12, 2, currentColor, -45)
-      display: inline-block
-      position: relative
-      top: -.1em
-      margin-left: 10px
+    +xs
+      width: 100%
+  
   &__aside
     width: percentage(3/12)
     padding-left: 15px
@@ -49,9 +40,12 @@
       width: 270px
   &__items
     width: percentage(9/12)
-    +flex(flex-start, normal, row, wrap)
+    // +flex(flex-start, normal, row, wrap)
+    // +clr
     +lg
       width: 100%
+  &__items-in
+    +flex(flex-start, normal, row, wrap)
   &__title
     width: 100%
     padding-left: 15px
@@ -60,6 +54,7 @@
     +md
       margin-bottom: 15px
   &__item
+    // float: left
     padding-left: 15px
     padding-right: 15px
     width: 33.33333%
@@ -76,10 +71,10 @@
   color: $white
   &__item
     +flex(flex-start, center)
-    +notlast
-      margin-bottom: 30px
-      +md
-        margin-bottom: 15px
+    // +notlast
+    //   margin-bottom: 30px
+    //   +md
+    //     margin-bottom: 15px
     img
       display: inline-block
       margin-right: 10px
