--- a/src/sass/partials/_nav.sass
+++ b/src/sass/partials/_nav.sass
@@ -8,11 +8,14 @@
     +xss
       +notlast
         margin-bottom: 10px
+    &.current-menu-item
+      color: $white
+      background-color: $accent
   a
     display: block
     text-transform: uppercase
     +tr(color .3s, background-color .3s)
-    padding: 25px
+    padding: 12px 25px
     // padding-right: 40px
     +xl
       padding-left: 10px
